# nbapproval

./: .gitignore  APPROVAL_TESTS.md  IDEAS.md  README.md  approval_test_utils.py  approval_tests.py  holiday_calculator.ipynb  holiday_calculator_idiomatic.ipynb  holiday_calculator_tested.ipynb  holiday_calculator_tested.papermill.ipynb  nbapproval.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
__approvals__/: holiday_calculator_tested.ipynb
tests/: test_nbapproval_api.py
